# inboxkit

./: .gitignore  LICENSE  README.md  __init__.py  guerrillamail.py  maildrop.py  mailtm.py  pyproject.toml  smailpro.py  temp_mail_app.py  tempmail_lol.py  tempy.py
enums/: provider.py
errors/provider/: abstraction.py  guerrillamail.py  secmail.py  temp_mail_app.py  temp_mail_org.py  tempail.py  tempmail_lol.py
factories/: __init__.py  provider.py
router/: tempmail.py
services/providers/: api_surfaces.py  registry.py
services/providers/guerrillamail/: __init__.py  generate.py  inbox.py
services/providers/maildrop/: __init__.py  inbox.py
services/providers/mailtm/: __init__.py  generate.py  inbox.py
services/providers/secmail/: __init__.py  abstraction.py
services/providers/smailpro/: abstraction.py  inbox.py
services/providers/temp_mail_app/: abstraction.py
services/providers/temp_mail_org/: __init__.py
services/providers/tempail/: generate.py
services/providers/tempmail_lol/: inbox.py
services/providers/tempmail_net/: abstraction.py  (+1 more)
src/inboxkit/: __init__.py  __main__.py  base.py  docs.py  secmail.py  temp_mail_org.py  tempail.py  tempmail_net.py
tests/: test_docs.py  test_inboxkit_router.py  test_inboxkit_router_extra.py  test_models_inbox.py  test_provider_coverage_core.py  test_provider_coverage_more.py  test_provider_coverage_tempmail_org_tempail.py  test_provider_factory.py  test_provider_package_imports.py  test_provider_sdk_surfaces.py  test_services_inbox.py  test_shim_imports.py  test_solid_contracts.py  test_tempmail_router.py  test_utilities.py
utilities/: classes.py
(+53 files in other folders)
