[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "inboxkit"
version = "0.1.0"
description = "Multi-provider disposable email toolkit — sticky or fallback routing across eleven providers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Use at your own will and risk — see LICENSE" }
authors = [{ name = "shregar1" }]
keywords = [
  "tempmail",
  "temporary-email",
  "disposable-email",
  "inbox",
  "verification",
  "mail.tm",
  "guerrillamail",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
inboxkit = "inboxkit.docs:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/shregar1/inboxkit"
Repository = "https://github.com/shregar1/inboxkit"
Issues = "https://github.com/shregar1/inboxkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/inboxkit"]

[tool.hatch.build.targets.sdist]
include = [
  "src/inboxkit",
  "tests",
  "LICENSE",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
